// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoogleTagManager should export the same stuff 1`] = `
Object {
  "AnalyticsContainer": [Function],
  "GoogleTagManagerBodyScript": [Function],
  "GoogleTagManagerHeaderScript": [Function],
  "analyticsContainer": AnalyticsContainer {},
  "globalDataLayer": [Function],
  "load": [Function],
  "toGlobalThis": [Function],
  "toGoogleTagManager": [Function],
  "trackEvent": [Function],
}
`;

exports[`GoogleTagManager should render *in* AMP mode 1`] = `
<div>
  <script
    async=""
    custom-element="amp-analytics"
    src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
  />
</div>
`;

exports[`GoogleTagManager should render *in* AMP mode 2`] = `
<div>
  <amp-analytics
    config="https://www.googletagmanager.com/amp.json?id=AMP_ID&gtm.url=SOURCE_URL"
    data-credentials="include"
  />
</div>
`;

exports[`GoogleTagManager should render in *non* AMP mode 1`] = `
<div>
  <script>
     (function(w,d,s,l,i){w[l]=w[l]||[]; w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js', }); var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:''; j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl; f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','WEB_ID');
  </script>
</div>
`;

exports[`GoogleTagManager should render in *non* AMP mode 2`] = `
<div>
  <noscript />
</div>
`;
